objects/EUR_CRM_PRS_Question__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>RIGHT(LEFT(RecordType.DeveloperName,6),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Question_Set__c</fullName>
        <label>PRS Question Set</label>
        <referenceTo>EUR_CRM_PRS_Question_Set__c</referenceTo>
        <relationshipLabel>PRS Questions (EU)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Question_Sequence__c</fullName>
        <label>Question Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Question_Statement__c</fullName>
        <label>Question Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Question_Statement_in_English__c</fullName>
        <label>Question Statement in English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Question_Weight__c</fullName>
        <label>Question Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Weight_Has_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weight Has Changed</label>
        <type>Checkbox</type>
    </fields>
    <label>PRS Question (EU)</label>
    <listViews>
        <fullName>EUR_BE_All_PRS_Questions_View</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Question_Statement__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Weight_Has_Changed__c</columns>
        <columns>EUR_CRM_PRS_Question_Set__c</columns>
        <columns>EUR_CRM_Question_Sequence__c</columns>
        <columns>EUR_CRM_Question_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question__c.EUR_BE_PRS_Question_Boolean_Input,EUR_CRM_PRS_Question__c.EUR_BE_PRS_Question_Currency_Input</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question__c.EUR_BE_PRS_Question_Number_Input,EUR_CRM_PRS_Question__c.EUR_BE_PRS_Question_Picklist_Input</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question__c.EUR_BE_PRS_Question_Text_Input</value>
        </filters>
        <label>EUR BE All PRS Questions View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_PRS_Questions_View</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Question_Statement__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Weight_Has_Changed__c</columns>
        <columns>EUR_CRM_PRS_Question_Set__c</columns>
        <columns>EUR_CRM_Question_Sequence__c</columns>
        <columns>EUR_CRM_Question_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question__c.EUR_BG_PRS_Question_Currency_Input,EUR_CRM_PRS_Question__c.EUR_BG_PRS_Question_Number_Input,EUR_CRM_PRS_Question__c.EUR_BG_PRS_Question_Picklist_Input</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question__c.EUR_BG_PRS_Question_Text_Input,EUR_CRM_PRS_Question__c.EUR_BG_PRS_Question_Boolean_Input</value>
        </filters>
        <label>EUR BG All PRS Questions View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRS-Q-{0000000000}</displayFormat>
        <label>PRS Question No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRS Questions (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_PRS_Question_Boolean_Input</fullName>
        <active>true</active>
        <label>EUR BE PRS Question - Boolean Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_Question_Currency_Input</fullName>
        <active>true</active>
        <label>EUR BE PRS Question - Currency Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_Question_Number_Input</fullName>
        <active>true</active>
        <label>EUR BE PRS Question - Number Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_Question_Picklist_Input</fullName>
        <active>true</active>
        <label>EUR BE PRS Question - Picklist Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_Question_Text_Input</fullName>
        <active>true</active>
        <label>EUR BE PRS Question - Text Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Question_Boolean_Input</fullName>
        <active>true</active>
        <label>EUR BG PRS Question - Boolean Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Question_Currency_Input</fullName>
        <active>true</active>
        <label>EUR BG PRS Question - Currency Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Question_Number_Input</fullName>
        <active>true</active>
        <label>EUR BG PRS Question - Number Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Question_Picklist_Input</fullName>
        <active>true</active>
        <label>EUR BG PRS Question - Picklist Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Question_Text_Input</fullName>
        <active>true</active>
        <label>EUR BG PRS Question - Text Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_PRS_Questions</fullName>
        <active>true</active>
        <label>PRS Questions</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>